--- a/Project/RVMDK（uv5）/Fire_FreeRTOS.uvprojx
+++ b/Project/RVMDK（uv5）/Fire_FreeRTOS.uvprojx
@@ -579,6 +579,11 @@
               <FileType>5</FileType>
               <FilePath>..\..\User\FreeRTOSConfig.h</FilePath>
             </File>
+            <File>
+              <FileName>bsp_iic.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\User\bsp\iic\bsp_iic.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
